# polaroid

./: .dockerignore  .gitignore  .readthedocs.yml  Cargo.docker.toml  Cargo.toml  Dockerfile  Dockerfile.fast  Dockerfile.optimized  Dockerfile.polaroid  Dockerfile.polarway  Dockerfile.serverless  GITHUB_ISSUES_ANALYSIS.md  Makefile  README.md  README_OLD.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.53.0.md  docker-compose.polaroid.yml  docker-compose.polarway.yml  mkdocs.yml
.github/workflows/: security.yml
api/rust/dev/polars/prelude/: struct.Arc.html
crates/polars-python/src/: lib.rs  monads.rs
crates/polars-python/src/c_api/: mod.rs
crates/polars-streaming-adaptive/: Cargo.toml
crates/polars-streaming-adaptive/benches/: streaming_benchmark.rs
crates/polars-streaming-adaptive/src/: adaptive_reader.rs  chunk_strategy.rs  error.rs  lib.rs  memory_manager.rs  mmap_reader.rs  parallel_stream.rs  predicate_pushdown.rs
crates/polars-streaming-adaptive/src/sources/: config.rs  dynamodb.rs  filesystem.rs  http.rs  mod.rs  s3.rs
crates/polars-streaming-adaptive/tests/: integration_test.rs
crates/polars-timeseries/: Cargo.toml
crates/polars-timeseries/src/: resample.rs  session.rs  twap.rs  vwap.rs
docs/: ADVANCED_ASYNC.md  API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DISTRIBUTED_GETTING_STARTED.md  DISTRIBUTED_IMPLEMENTATION_PLAN.md  FUNCTIONAL_PROGRAMMING_ADVANTAGES.md  MIGRATION_GUIDE.md  MODE_SELECTION_GUIDE.md  MULTI_MODE_IMPLEMENTATION_PLAN.md  OWNERSHIP_TRANSFER.md  PERFORMANCE_COMPARISON.md  QUICK_REFERENCE.md  README_DOCKER.md  README_OLD.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.53.0.md  REST_EXEC_API.md  SERVERLESS_OPTIMIZATION.md  STREAMING_ADAPTIVE.md  UPSTREAM_PR_STRATEGY.md  USER_GUIDE.md  WHEN_NOT_TO_USE.md  concepts.md  distributed-mode.md  examples.md  getting-started.md  index.md  installation.md  lakehouse.md  python-client.md  requirements.txt  rust-client.md
docs/guides/: MIGRATION_GUIDE.md  QUICK_REFERENCE.md
docs/source/: architecture.md  conf.py  examples.md  index.rst  quickstart.md  storage.md
docs/source/concepts/: hybrid-storage.md  index.md  railway.md
docs/summaries/: ASYNC_FEATURES_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  PHASE4_TIMESERIES_SUMMARY.md  PHASE_2_SUMMARY.md
examples/: advanced_tokio.rs  benchmark_timeseries.py  monads_example.py  test_timeseries.py  websocket_client.py  websocket_streaming.rs
notebooks/: README.md  adaptive_streaming_benchmarks.ipynb  environment_check.ipynb  functional_monads.py  phase5_streaming_test.ipynb  polaroid_advanced.ipynb  polaroid_cloud_integrations.ipynb  polaroid_functional_programming.ipynb  polaroid_functional_programming_v2.ipynb  polaroid_showcase.ipynb  polarway_advanced.ipynb  polarway_cloud_integrations.ipynb  polarway_functional_programming.ipynb  polarway_showcase.ipynb  rest_exec_api_demo.ipynb  storage_demo.ipynb
polaroid-grpc/: Cargo.toml
polaroid-grpc/src/: handles.rs  lib.rs  service.rs
polaroid-grpc/src/storage/: mod.rs
polaroid-python/polaroid/: polaroid_pb2_grpc.py
polarway-distributed/: Cargo.toml
polarway-distributed/src/: coordinator.rs  lib.rs
polarway-grpc/: Cargo.toml
polarway-grpc/examples/: grpc_e2e_inproc.rs
polarway-grpc/src/: error.rs  handles.rs  http_api.rs  lib.rs  main.rs  optimizations.rs  service.rs  service.rs.backup
polarway-grpc/tests/: grpc_service_e2e.rs
polarway-lakehouse/: Cargo.toml  README.md
polarway-lakehouse/src/: config.rs  error.rs  lib.rs  maintenance.rs  schema.rs  store.rs
polarway-lakehouse/src/audit/: actor.rs  mod.rs  types.rs
polarway-lakehouse/src/auth/: actor.rs  mod.rs  types.rs
polarway-lakehouse/tests/: auth_tests.rs  store_tests.rs
polarway-python/: README.md  generate_protos.sh  pyproject.toml  pyrightconfig.json
polarway-python/polarway/: __init__.py  async_client.py  client.py  config.py  exceptions.py  lakehouse.py  polarway_pb2.py  polarway_pb2_grpc.py  types.py
polarway-python/tests/: test_lakehouse.py  test_read_rest_api.py
polarway-sources/: Cargo.toml
polarway-sources/src/: error.rs  lib.rs
proto/: polarway.proto
pyo3-polars/: README.md
scripts/: build-serverless.sh  deploy-azure.sh  start-server.sh  test-http-server.sh
serverless/: Cargo.toml  Dockerfile.azure  Dockerfile.containerapp
serverless/azure-deploy/: host.json
serverless/azure-functions/: .funcignore  host.json
serverless/src/: http_server.rs  lib.rs
src/storage/: cache.rs  duckdb_backend.rs  mod.rs  parquet_backend.rs
tools/: run_notebooks.py
