[build-system]
requires = ["setuptools>=61.0", "wheel", "grpcio-tools>=1.60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polarway"
version = "0.1.1"
description = "FDAP-optimized DataFrame engine with gRPC interface"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Polarway Contributors"}
]
keywords = ["dataframe", "arrow", "grpc", "streaming", "time-series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pyarrow>=15.0.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies.lakehouse]
lakehouse = [
    "deltalake>=0.18.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ThotDjehuty/polarway"
Documentation = "https://docs.polarway.rs"
Repository = "https://github.com/ThotDjehuty/polarway"
Issues = "https://github.com/ThotDjehuty/polarway/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["polarway*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
